--- a/myfirstpage.html
+++ b/myfirstpage.html
@@ -3,14 +3,10 @@
 <head>
     <title>My first web page</title>
     <link rel="stylesheet" href="style.css">
-    <div id="top">
-
-<h1>Chocolate curry</h1>
-
-<p class="intro">This is my recipe for making curry purely with chocolate</p>
-
-<p class="intro">Mmm mm mmmmm</p>
-
+  <div id="top">
+    <h1>Chocolate curry</h1>
+    <p>This is my recipe for making curry purely with chocolate</p>
+    <p>Mmm mm mmmmm</p>
 </div>
 </head>
 
