--- a/myfirstpage.html
+++ b/myfirstpage.html
@@ -97,6 +97,22 @@
 <div id="footer">
     <p>Footer! Hoorah!</p>
 </div>
+<ul id="genus_examples">
+    <li>Cats
+        <ul>
+            <li>Panthera</li>
+            <li>Felis</li>
+            <li>Neofelis</li>
+        </ul>
+    </li>
+    <li>Apes
+        <ul>
+            <li>Pongo</li>
+            <li>Pan</li>
+            <li>Homo</li>
+        </ul>
+    </li>
+</ul>
 
 
 </body>
